tests/machine/x/rust/in_operator_extended.error
line 0: compile: exit status 1
error[E0599]: no method named `contains` found for struct `BTreeMap` in the current scope
 --> /workspace/mochi/tests/machine/x/rust/in_operator_extended.rs:7:32
  |
7 |     println!("{:?}", m.clone().contains(&"a"));
  |                                ^^^^^^^^
  |
help: there is a method `contains_key` with a similar name
  |
7 |     println!("{:?}", m.clone().contains_key(&"a"));
  |                                        ++++

error[E0599]: no method named `contains` found for struct `BTreeMap` in the current scope
 --> /workspace/mochi/tests/machine/x/rust/in_operator_extended.rs:8:32
  |
8 |     println!("{:?}", m.clone().contains(&"b"));
  |                                ^^^^^^^^
  |
help: there is a method `contains_key` with a similar name
  |
8 |     println!("{:?}", m.clone().contains_key(&"b"));
  |                                        ++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0599`.

fn main() {